agregando estilos css

--- a/src/views/vistas/inicio.hbs
+++ b/src/views/vistas/inicio.hbs
@@ -10,6 +10,7 @@
     .employes,
     .employes1,
     .employes2,
+    .employes3,
     .regresa {
         animation: fadeIn 1s ease;
         -moz-animation: fadeIn 1s ease;
