agregando cambios en vistas

--- a/src/views/vistas/inicio.hbs
+++ b/src/views/vistas/inicio.hbs
@@ -100,7 +100,7 @@
             <tbody>
                 {{#each empleados}}
                 <tr height="100px">
-                    <td>{{e_id}}</td>
+                    <td>{{empleado_id}}</td>
                     <td>{{nombre}}</td>
                     <td>{{apellidos}} </td>
                     <td>{{denominacion}}</td>
