--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="#">Más información</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Otros</a>
+                    <a class="nav-link" aria-disabled="true">Otros</a>
                 </li>
             </ul>
 
