--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="theme-color" content="#cc99cc">
-    <meta http-equiv="Content-Type" content="text/html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{!-- Bootstrap --}}
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {{! Bootstrap }}
     <script src="/js/jquery.min.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet"
-        >
-    <script src="/js/bootstrap.bundle.min.js"
-        ></script>
-    {{!-- Estilos --}}
-    <title>Empleados y departamentos</title>
-    <meta name="author" content="TeamAlphaDinamita">
-</head>
+    {{! Estilos }}
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="/js/bootstrap.bundle.min.js"></script>
 
-<body>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Áreas de empleados" />
+    <meta property="og:url" content="https://areas-empleados.vercel.app/" />
+    <meta property="og:image" content="/image/logo.webp" />
+    <meta
+      property="og:description"
+      content="Mostrando diferentes áreas de empleados"
+    />
+
+    <title>Empleados y departamentos</title>
+  </head>
+
+  <body>
 
     {{{body}}}
-    {{!-- Bootstrap script --}}
-</body>
-
+  </body>
 
 </html>
