Agregando estilos a la carpeta css

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,6 +20,8 @@
     />
 
     <title>Empleados y departamentos</title>
+    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/error.css">
   </head>
 
   <body>
