Ajustes en estilos

--- a/src/views/vistas/vista404.hbs
+++ b/src/views/vistas/vista404.hbs
@@ -19,7 +19,7 @@
             <div class="spoke"></div>
         </div>
     </div>
-    <div style="display: flex; justify-content: center;" class="text-center">
+    <div  class="text-center">
         <h2>Parece que no existe contenido relacionado. <a href="/">De click aqui</a></h2>
     </div>
     
