--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,6 +20,7 @@
     />
 
     <title>Empleados y departamentos</title>
+    <link rel="shortcut icon" href="/image/logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="/css/error.css">
   </head>
