--- a/src/views/vistas/vista404.hbs
+++ b/src/views/vistas/vista404.hbs
@@ -1,5 +1,5 @@
 
-    <div style="display: flex; justify-content: center;">
+    <div style="" class="d-flex justify-content-center">
         <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
             <div class="wheel"></div>
             <div class="hamster">
