Agregando tag description

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,11 +18,15 @@
       property="og:description"
       content="Mostrando diferentes áreas de empleados"
     />
+    <meta
+      name="description"
+      content="Mostrando diferentes áreas de empleados"
+    />
 
     <title>Empleados y departamentos</title>
-    <link rel="shortcut icon" href="/image/logo.webp" type="image/x-icon">
-    <link rel="stylesheet" href="/css/estilos.css">
-    <link rel="stylesheet" href="/css/error.css">
+    <link rel="shortcut icon" href="/image/logo.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="/css/error.css" />
   </head>
 
   <body>
