--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,14 +1,10 @@
+<!DOCTYPE html>
 <html lang="es">
 
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    {{! Bootstrap }}
-    <script src="/js/jquery.min.js"></script>
-    {{! Estilos }}
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="/js/bootstrap.bundle.min.js"></script>
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Áreas de empleados" />
@@ -24,6 +20,8 @@
     />
 
     <title>Empleados y departamentos</title>
+    {{! Estilos }}
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/image/logo.webp" type="image/x-icon" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/error.css" />
@@ -32,6 +30,9 @@
   <body>
 
     {{{body}}}
+    {{! Bootstrap }}
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 
 </html>
